# A3_MovieRating

./: CMakeLists.txt
include/: movie.h  movie_factory.h
src/: main.cpp  movie.cpp  movie_factory.cpp
test/: test.cpp
